--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,1 +1,4 @@
-<p>NEW</p>
+<div class="container">
+    <%= form_with(model: @article, url: articles_path, method: 'post', local: true) do |f|  %>
+    <% end %>
+</div>
