--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -11,3 +11,7 @@
       = f.label :introduction, '自己紹介'
     %div
       = f.text_area :introduction  
+    %div   
+      = f.label :gender, '性別'
+    %div
+      = f.select :gender, Profile.genders.keys, {}, { class: 'text '}
