--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,5 +1,5 @@
 .container
-  = render 'tabs'
+  = render 'commons/tabs'
   = @articles.each do |article|
     = render 'commons/article', article: article
   .float_btn
